made links in nav bar to sections work

--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
     </header>
     <!-- main content -->
     <main class="main-content">
-        <div id= "#About-Me">
+        <div class = "#About-Me" id= "About-Me">
             <h2>About Me</h2>
             <p>
                 My Name is Katlyn....
             </p>
         </div>
-        <div id="#Work">
+        <div class = "#Work" id = "Work">
             <h2>Work</h2>
             <p>
                 My Work here...
             </p>
         </div>
-        <div id="#Contact-Me">
-            <h2>Contact Me</h2>
+        <div class = "#Contact-Me" id="Contact-Me">
+            <h3>Contact Me</h2>
             <p>
                 katlynboches@gmail.com
             </p>
