underlined nav links and added main image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Katlyn's Portfolio</title>
+    <title class ="title">Katlyn's Portfolio</title>
 </head>
 <body>
     <header class="header">
@@ -30,12 +30,17 @@
     </header>
     <!-- main content -->
     <main class="main-content">
-        <div class = "#About-Me" id= "About-Me">
-            <h2>About Me</h2>
-            <p>
-                My Name is Katlyn....
-            </p>
+            <ul>
+                <div class = "#About-Me" id= "About-Me" class = "#verticle-line">
+                    <h2>About Me</h2>
+                    <p>
+                        My Name is Katlyn....
+                    </p>
+                    </div>
+                </div>
+            </ul>
         </div>
+    </div>
         <div class = "#Work" id = "Work">
             <h2>Work</h2>
             <p>
