--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title class ="title">Katlyn's Portfolio</title>
 </head>
+
 <body>
     <header class="header">
-        <h1>Katlyn Boches</h1>
+        <h1 id="h1">Katlyn Boches</h1>
         <nav>
             <ul>
                 <li>
@@ -25,42 +26,54 @@
                 </li>
             </ul>
         </nav>
-        <div class="main-image"></div>
-        <sub class = "Subtitle">Cool Subtitle Here</sub>
     </header>
+    <div class="main-image"></div>
+        <sub class = "Subtitle">Cool Subtitle Here</sub>
+</body>
+<div class="main-image">
+</div>
+
+
     <!-- main content -->
     <main class="main-content">
-            <ul>
-                <div class = "#About-Me" id= "About-Me" class = "#verticle-line">
-                    <h2>About Me</h2>
-                    <p>
-                        My Name is Katlyn....
-                    </p>
-                    </div>
-                </div>
-            </ul>
+    <div>
+        <div class = "#About-Me" id= "About-Me">
+            <h2>About Me</h2>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi optio fuga doloremque perspiciatis, ipsa dolores perferendis sequi veritatis totam dignissimos, dolore illum tempora ad amet harum eligendi iusto, quibusdam minima! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, molestias temporibus. Optio veritatis perferendis, asperiores expedita tenetur eveniet nobis sit ducimus pariatur consequatur, autem ab? Quae perferendis id cum ad?
+            </p>
+            </div>
         </div>
+</div>
+<div class = "#Work" id = "Work">
+    <h2>Work</h2>
+    <p>
+       
+    </p>
+</div>
+<div class = "#Contact-Me" id="Contact-Me">
+    <h3>Contact Me</h2>
+            <li>
+                <a href="Phone-Number">555-633-3464</a>
+            </li>
+            <br>
+            <li>
+                <a href="Email">katlynboches@gmail.com</a>
+            </li>
+            <br>
+            <li>
+             <a href="Github">Github</a>
+            </li>
+            <br>
+            <li>
+                <a href="Twitter">Twitter</a>
+            </li>
+            <br>
+            <li>
+                <a href="Spotify">Spotify</a>
+            </li>
     </div>
-        <div class = "#Work" id = "Work">
-            <h2>Work</h2>
-            <p>
-                My Work here...
-            </p>
-        </div>
-        <div class = "#Contact-Me" id="Contact-Me">
-            <h3>Contact Me</h2>
-            <p>
-                katlynboches@gmail.com
-            </p>
-        </div>
     </main>
-<!-- create footer -->
-<footer class="footer">
-        <h2>Katlyn Boches Portfolio 2021</h2>
-        <p>
-            &copy; Katlyn Boches 2021
-        </p>
-</footer>
 </body>
 
 </html>
