--- a/index.html
+++ b/index.html
@@ -1,79 +1,74 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title class ="title">Katlyn's Portfolio</title>
-</head>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title class="title">Katlyn's Portfolio</title>
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <h1 id="h1">Katlyn Boches</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#About-Me">About Me</a>
-                </li>
-                <li>
-                    <a href="#Work">Work</a>
-                </li>
-                <li>
-                    <a href="#Contact-Me">Contact Me</a>
-                </li>
-                <li>
-                    <a href="#Resume">Resume</a>
-                </li>
-            </ul>
-        </nav>
+      <h1 id="name">Katlyn Boches</h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="#About-Me">About Me</a>
+          </li>
+          <li>
+            <a href="#Work">Work</a>
+          </li>
+          <li>
+            <a href="#Contact-Me">Contact Me</a>
+          </li>
+          <li>
+            <a href="#Resume">Resume</a>
+          </li>
+        </ul>
+      </nav>
     </header>
-    <div class="main-image"></div>
-        <sub class = "Subtitle">Cool Subtitle Here</sub>
-</body>
-<div class="main-image">
-</div>
-
+    
+    <div.relative class="main-image"><div.absolute class="subtitle">Cool Subtitle Here</sub></div>
 
     <!-- main content -->
     <main class="main-content">
-    <div>
-        <div class = "#About-Me" id= "About-Me">
-            <h2>About Me</h2>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi optio fuga doloremque perspiciatis, ipsa dolores perferendis sequi veritatis totam dignissimos, dolore illum tempora ad amet harum eligendi iusto, quibusdam minima! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, molestias temporibus. Optio veritatis perferendis, asperiores expedita tenetur eveniet nobis sit ducimus pariatur consequatur, autem ab? Quae perferendis id cum ad?
-            </p>
-            </div>
+      <div>
+        <div class="About-Me" id="About-Me">
+          <h2>About Me</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi optio
+            fuga doloremque perspiciatis, ipsa dolores perferendis sequi
+            veritatis totam dignissimos, dolore illum tempora ad amet harum
+            eligendi iusto, quibusdam minima! Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Eius, molestias temporibus. Optio
+            veritatis perferendis, asperiores expedita tenetur eveniet nobis sit
+            ducimus pariatur consequatur, autem ab? Quae perferendis id cum ad?
+          </p>
         </div>
-</div>
-<div class = "#Work" id = "Work">
-    <h2>Work</h2>
-    <p>
-       
-    </p>
-</div>
-<div class = "#Contact-Me" id="Contact-Me">
-    <h3>Contact Me</h2>
-            <li>
-                <a href="Phone-Number">555-633-3464</a>
-            </li>
-            <br>
-            <li>
-                <a href="Email">katlynboches@gmail.com</a>
-            </li>
-            <br>
-            <li>
-             <a href="Github">Github</a>
-            </li>
-            <br>
-            <li>
-                <a href="Twitter">Twitter</a>
-            </li>
-            <br>
-            <li>
-                <a href="Spotify">Spotify</a>
-            </li>
-    </div>
+      </div>
+      <div class="Work" id="Work">
+        <h2>Work</h2>
+        <p></p>
+      </div>
+      <div class="Contact-Me" id="Contact-Me">
+        <h3>Contact Me</h3>
+        <ul>
+          <li>
+            <a href="Phone-Number">555-633-3464</a>
+          </li>
+          <li>
+            <a href="Email">katlynboches@gmail.com</a>
+          </li>
+          <li>
+            <a href="Github">Github</a>
+          </li>
+          <li>
+            <a href="Twitter">Twitter</a>
+          </li>
+          <li>
+            <a href="Spotify">Spotify</a>
+          </li>
+        </ul>
+      </div>
     </main>
-</body>
-
+  </body>
 </html>
