--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <header class="header">
-      <h1 id="name">Katlyn Boches</h1>
+      <h1>Katlyn Boches</h1>
       <nav>
         <ul>
           <li>
@@ -26,13 +26,12 @@
         </ul>
       </nav>
     </header>
-    
-    <div.relative class="main-image"><div.absolute class="subtitle">Cool Subtitle Here</sub></div>
-
-    <!-- main content -->
+    <div class="main-image">
+      <div class="subtitle">Cool Subtitle Here</div>
+    </div>
     <main class="main-content">
       <div>
-        <div class="About-Me" id="About-Me">
+        <div class="about-me" id="about-me">
           <h2>About Me</h2>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi optio
@@ -45,11 +44,11 @@
           </p>
         </div>
       </div>
-      <div class="Work" id="Work">
+      <div class="work" id="work">
         <h2>Work</h2>
         <p></p>
       </div>
-      <div class="Contact-Me" id="Contact-Me">
+      <div class="contact-Me" id="contact-Me">
         <h3>Contact Me</h3>
         <ul>
           <li>
