added resume link to portfolio

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#Contact-Me">Contact Me</a>
           </li>
           <li>
-            <a href="#Resume">Resume</a>
+            <a href="/Professional-Portfolio-KIB/KatlynBoches.html">Resume</a>
           </li>
         </ul>
       </nav>
@@ -31,7 +31,7 @@
     </div>
     <main class="main-content">
       <div>
-        <div class="about-me" id="about-me">
+        <div class="About-Me" id="About-Me">
           <h2>About Me</h2>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi optio
@@ -44,11 +44,11 @@
           </p>
         </div>
       </div>
-      <div class="work" id="work">
+      <div class="Work" id="Work">
         <h2>Work</h2>
         <p></p>
       </div>
-      <div class="contact-Me" id="contact-Me">
+      <div class="Contact-Me" id="Contact-Me">
         <h3>Contact Me</h3>
         <ul>
           <li>
