created resume link for html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <header class="header">
-      <h1>Katlyn Boches</h1>
+      <h1>Katlyn Irene Boches</h1>
       <nav>
         <ul>
           <li>
