added portfolio link in resume

--- a/KatlynBoches.html
+++ b/KatlynBoches.html
@@ -891,7 +891,7 @@
       ><span class="c0"
         ><a
           class="c7"
-          href="https://www.google.com/url?q=https://github.com/Katlyn627&amp;sa=D&amp;source=editors&amp;ust=1630906400178000&amp;usg=AOvVaw0X-DAbhLGLXMjlh-3LLHEf"
+          href="https://katlyn627.github.io/Professional-Portfolio-KIB/"
           >Portfolio.GitHub</a
         ></span
       ><span>&nbsp; &nbsp;| GitHub: &nbsp;</span
