edited resume link

--- a/KatlynBoches.html
+++ b/KatlynBoches.html
@@ -612,54 +612,25 @@
       table th {
         padding: 0;
       }
+      .c11 {
+        -webkit-text-decoration-skip: none;
+        color: #1155cc;
+        text-decoration: underline;
+        vertical-align: baseline;
+        text-decoration-skip-ink: none;
+        font-family: "Arial";
+        font-style: normal;
+      }
       .c6 {
         margin-left: 36pt;
         padding-top: 0pt;
-        padding-left: 0pt;
         padding-bottom: 0pt;
-        line-height: 1.15;
+        line-height: 1;
         orphans: 2;
         widows: 2;
         text-align: left;
       }
-      .c13 {
-        margin-left: 36pt;
-        padding-top: 0pt;
-        padding-left: 0pt;
-        padding-bottom: 6pt;
-        line-height: 1.1500000000000001;
-        orphans: 2;
-        widows: 2;
-        text-align: left;
-      }
-      .c16 {
-        color: #212121;
-        font-weight: 400;
-        text-decoration: none;
-        vertical-align: baseline;
-        font-size: 11pt;
-        font-family: "Arial";
-        font-style: normal;
-      }
-      .c8 {
-        padding-top: 0pt;
-        padding-bottom: 0pt;
-        line-height: 1.15;
-        orphans: 2;
-        widows: 2;
-        text-align: justify;
-        height: 11pt;
-      }
-      .c2 {
-        color: #000000;
-        font-weight: 400;
-        text-decoration: none;
-        vertical-align: baseline;
-        font-size: 11pt;
-        font-family: "Arial";
-        font-style: normal;
-      }
-      .c9 {
+      .c15 {
         background-color: #ffffff;
         padding-top: 0pt;
         padding-bottom: 0pt;
@@ -669,27 +640,25 @@
         text-align: left;
       }
       .c10 {
-        color: #000000;
-        font-weight: 700;
-        text-decoration: none;
-        vertical-align: baseline;
-        font-size: 16pt;
-        font-family: "Arial";
-        font-style: normal;
-      }
-      .c5 {
-        color: #000000;
-        font-weight: 700;
-        text-decoration: none;
-        vertical-align: baseline;
-        font-size: 11pt;
-        font-family: "Arial";
-        font-style: normal;
-      }
-      .c1 {
         padding-top: 0pt;
         padding-bottom: 0pt;
-        line-height: 1;
+        line-height: 1.15;
+        orphans: 2;
+        widows: 2;
+        text-align: justify;
+      }
+      .c12 {
+        padding-top: 0pt;
+        padding-bottom: 6pt;
+        line-height: 1.1500000000000001;
+        orphans: 2;
+        widows: 2;
+        text-align: left;
+      }
+      .c2 {
+        padding-top: 0pt;
+        padding-bottom: 0pt;
+        line-height: 1.15;
         orphans: 2;
         widows: 2;
         text-align: left;
@@ -697,67 +666,79 @@
       .c18 {
         padding-top: 0pt;
         padding-bottom: 0pt;
-        line-height: 1.15;
+        line-height: 1;
         orphans: 2;
         widows: 2;
-        text-align: center;
+        text-align: left;
       }
-      .c11 {
+      .c4 {
         padding-top: 0pt;
         padding-bottom: 0pt;
         line-height: 1.15;
         orphans: 2;
         widows: 2;
-        text-align: left;
+        text-align: center;
       }
-      .c19 {
-        font-weight: 400;
+      .c1 {
+        color: #000000;
+        text-decoration: none;
         vertical-align: baseline;
-        font-size: 11pt;
         font-family: "Arial";
         font-style: normal;
       }
-      .c21 {
+      .c14 {
+        color: #212121;
+        text-decoration: none;
         vertical-align: baseline;
-        font-size: 11pt;
         font-family: "Arial";
         font-style: normal;
       }
-      .c0 {
+      .c13 {
         text-decoration-skip-ink: none;
         -webkit-text-decoration-skip: none;
         color: #1155cc;
         text-decoration: underline;
       }
-      .c3 {
+      .c21 {
         background-color: #ffffff;
         max-width: 468pt;
         padding: 72pt 72pt 72pt 72pt;
       }
-      .c17 {
-        font-weight: 400;
-        font-family: "Roboto";
-      }
-      .c12 {
-        margin-left: 36pt;
-        height: 11pt;
-      }
-      .c7 {
+      .c20 {
         color: inherit;
         text-decoration: inherit;
       }
-      .c4 {
+      .c19 {
+        font-weight: 400;
+        font-family: "Roboto";
+      }
+      .c0 {
+        font-size: 16pt;
+        font-weight: 700;
+      }
+      .c17 {
         padding: 0;
         margin: 0;
       }
-      .c20 {
-        font-size: 16pt;
+      .c3 {
+        font-weight: 400;
+        font-size: 11pt;
       }
-      .c14 {
+      .c7 {
+        margin-left: 36pt;
+        padding-left: 0pt;
+      }
+      .c5 {
+        height: 11pt;
+      }
+      .c16 {
+        margin-left: 36pt;
+      }
+      .c8 {
         font-weight: 700;
       }
-      .c15 {
-        height: 11pt;
+      .c9 {
+        font-size: 11pt;
       }
       .title {
         padding-top: 0pt;
@@ -869,48 +850,48 @@
       }
     </style>
   </head>
-  <body class="c3">
-    <p class="c11"><span class="c14 c20">Katlyn Boches</span></p>
-    <p class="c18">
+  <body class="c21">
+    <p class="c2"><span class="c0">Katlyn Boches</span></p>
+    <p class="c4">
       <span>Phone: (720) 628-3887 | Email: </span
-      ><span class="c0"
-        ><a class="c7" href="mailto:katlynboches@gmail.com"
+      ><span class="c13"
+        ><a class="c20" href="mailto:katlynboches@gmail.com"
           >katlynboches@email.com</a
         ></span
-      ><span class="c2">&nbsp;| Superior, CO, 80027</span>
+      ><span class="c1 c3">&nbsp;| Superior, CO, 80027</span>
     </p>
-    <p class="c18">
+    <p class="c4">
       <span>LinkedIn: </span
-      ><span class="c0"
+      ><span class="c13"
         ><a
-          class="c7"
-          href="https://www.google.com/url?q=https://www.linkedin.com/in/katlyn-boches-20110732/&amp;sa=D&amp;source=editors&amp;ust=1630906400177000&amp;usg=AOvVaw2nh6y2Z4BuZHqqqm7kyrVz"
+          class="c20"
+          href="https://www.google.com/url?q=https://www.linkedin.com/in/katlyn-boches-20110732/&amp;sa=D&amp;source=editors&amp;ust=1630908651620000&amp;usg=AOvVaw3TP8MfbaqRUeLFY3i6WPjG"
           >katlyn-boches-20110732/
         </a></span
       ><span>&nbsp;</span><span>| Portfolio:</span
-      ><span class="c0"
+      ><span class="c13"
         ><a
-          class="c7"
-          href="https://katlyn627.github.io/Professional-Portfolio-KIB/"
-          >Portfolio.GitHub</a
+          class="c20"
+          href="https://www.google.com/url?q=https://katlyn627.github.io/Professional-Portfolio-KIB/folio-KIB/&amp;sa=D&amp;source=editors&amp;ust=1630908651621000&amp;usg=AOvVaw1tn14pWw6qZJridALLI3P4"
+          >Github Portfolio</a
         ></span
       ><span>&nbsp; &nbsp;| GitHub: &nbsp;</span
-      ><span class="c0"
+      ><span class="c13"
         ><a
-          class="c7"
-          href="https://www.google.com/url?q=https://github.com/Katlyn627&amp;sa=D&amp;source=editors&amp;ust=1630906400178000&amp;usg=AOvVaw0X-DAbhLGLXMjlh-3LLHEf"
+          class="c20"
+          href="https://www.google.com/url?q=https://github.com/Katlyn627&amp;sa=D&amp;source=editors&amp;ust=1630908651621000&amp;usg=AOvVaw2zDE1z0A0qvtEuz2Xf9pyz"
           >/Katlyn627</a
         ></span
       >
     </p>
-    <p class="c8"><span class="c16"></span></p>
-    <p class="c11">
+    <p class="c5 c10"><span class="c3 c14"></span></p>
+    <p class="c2">
       <span>Front-end</span><span>&nbsp;web developer </span
-      ><span class="c17"
+      ><span class="c19"
         >leveraging background in culinary arts and food service management to
         provide unique perspectives on how end-users interact with websites and
         software platforms.</span
-      ><span class="c2"
+      ><span class="c1 c3"
         >&nbsp;In the process of earning a certificate in Full Stack Web
         Development from the University of Denver Coding Boot Camp. Innovative
         problem-solver who is passionate about developing apps with a focus on
@@ -918,106 +899,110 @@
         and building projects from ideation to execution.</span
       >
     </p>
-    <p class="c11 c15"><span class="c2"></span></p>
-    <p class="c18"><span class="c5">TECHNICAL SKILLS</span></p>
-    <p class="c9">
-      <span class="c14">Languages: </span
-      ><span class="c2">JavaScript ES6+, CSS3, HTML5</span>
+    <p class="c2 c5"><span class="c1 c3"></span></p>
+    <p class="c4"><span class="c1 c8 c9">TECHNICAL SKILLS</span></p>
+    <p class="c15">
+      <span class="c8">Languages: </span
+      ><span class="c1 c3">JavaScript ES6+, CSS3, HTML5</span>
     </p>
-    <p class="c9">
-      <span class="c14">Applications: </span><span class="c2">GitHub </span>
+    <p class="c15">
+      <span class="c8">Applications: </span><span class="c1 c3">GitHub </span>
     </p>
-    <p class="c9">
-      <span class="c14">Tools: </span
-      ><span class="c2"
+    <p class="c15">
+      <span class="c8">Tools: </span
+      ><span class="c1 c3"
         >Express, React, Node, Handlebars, Query, Bootstrap</span
       >
     </p>
-    <p class="c11 c15"><span class="c2"></span></p>
-    <p class="c18"><span class="c5">&nbsp;PROJECTS</span></p>
-    <p class="c11">
-      <span class="c5"
+    <p class="c2 c5"><span class="c1 c3"></span></p>
+    <p class="c4"><span class="c1 c8 c9">&nbsp;PROJECTS</span></p>
+    <p class="c2">
+      <span class="c1 c8 c9"
         >Lisa Botalico, Flamenco Dancer! | Written link to GitHub | Written link
         to deployed project
       </span>
     </p>
-    <ul class="c4 lst-kix_42upiswsjwa-0 start">
-      <li class="c6 li-bullet-0">
-        <span class="c2"
+    <ul class="c17 lst-kix_42upiswsjwa-0 start">
+      <li class="c2 c7 li-bullet-0">
+        <span class="c1 c3"
           >Summary: Promotional site for the great Flamenco dancer Lisa
           Botalico</span
         >
       </li>
     </ul>
-    <ul class="c4 lst-kix_8xqh3xtrfgo4-0 start">
-      <li class="c6 li-bullet-0"><span class="c2">Role: Sole author</span></li>
+    <ul class="c17 lst-kix_8xqh3xtrfgo4-0 start">
+      <li class="c2 c7 li-bullet-0">
+        <span class="c1 c3">Role: Sole author</span>
+      </li>
     </ul>
-    <ul class="c4 lst-kix_1l1x5carzjlh-0 start">
-      <li class="c6 li-bullet-0">
+    <ul class="c17 lst-kix_1l1x5carzjlh-0 start">
+      <li class="c2 c7 li-bullet-0">
         <span
           >Tools: HTML, CSS, JavaScript, Bootstrap, GoogleFonts, Photoshop</span
         >
       </li>
     </ul>
-    <p class="c11 c15"><span class="c0 c14 c21"></span></p>
-    <p class="c11">
-      <span class="c5"
+    <p class="c2 c5"><span class="c11 c8 c9"></span></p>
+    <p class="c2">
+      <span class="c1 c8 c9"
         >WeatherApp | Written link to GitHub | Written link to deployed project
       </span>
     </p>
-    <ul class="c4 lst-kix_7odn24np0qt1-0 start">
-      <li class="c6 li-bullet-0">
-        <span class="c2"
+    <ul class="c17 lst-kix_7odn24np0qt1-0 start">
+      <li class="c2 c7 li-bullet-0">
+        <span class="c1 c3"
           >Summary: Weather app that provides current and future weather
           forecasts in cities.</span
         >
       </li>
-      <li class="c6 li-bullet-0"><span class="c2">Role: Sole author </span></li>
-      <li class="c6 li-bullet-0">
+      <li class="c2 c7 li-bullet-0">
+        <span class="c1 c3">Role: Sole author </span>
+      </li>
+      <li class="c2 c7 li-bullet-0">
         <span
           >Tools: HTML, CSS, JavaScript, jQuery, API, Bootstrap, Font Awesome,
           Photoshop</span
-        ><span class="c5">&nbsp; </span>
+        ><span class="c1 c8 c9">&nbsp; </span>
       </li>
     </ul>
-    <p class="c11 c12"><span class="c5"></span></p>
-    <p class="c18 c15"><span class="c5"></span></p>
-    <p class="c18"><span class="c5">EXPERIENCE</span></p>
-    <p class="c11">
-      <span class="c5"
+    <p class="c2 c5 c16"><span class="c1 c8 c9"></span></p>
+    <p class="c4 c5"><span class="c1 c8 c9"></span></p>
+    <p class="c4"><span class="c1 c8 c9">EXPERIENCE</span></p>
+    <p class="c2">
+      <span class="c1 c8 c9"
         >Junior Web
         Developer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2018-Present&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span
       >
     </p>
-    <p class="c11">
-      <span class="c5"
+    <p class="c2">
+      <span class="c1 c8 c9"
         >Paws Animal Shelter
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Austin,
         TX</span
       >
     </p>
-    <p class="c11">
-      <span class="c2"
+    <p class="c2">
+      <span class="c1 c3"
         >Developed a user-friendly webpage to bring attention to shelter needs,
         events, and services.</span
       >
     </p>
-    <p class="c11"><span class="c2">Key Accomplishments:</span></p>
-    <ul class="c4 lst-kix_gtdoxexzeh4n-0 start">
-      <li class="c6 li-bullet-0">
-        <span class="c2"
+    <p class="c2"><span class="c1 c3">Key Accomplishments:</span></p>
+    <ul class="c17 lst-kix_gtdoxexzeh4n-0 start">
+      <li class="c2 c7 li-bullet-0">
+        <span class="c1 c3"
           >Co-developed a user-friendly, intuitive, and secure website from
           scratch with interactive features to optimize traffic and user
           experience.</span
         >
       </li>
-      <li class="c6 li-bullet-0">
-        <span class="c2"
+      <li class="c2 c7 li-bullet-0">
+        <span class="c1 c3"
           >Collaborated with all stakeholders successfully while remaining
           fiscally responsible.</span
         >
       </li>
-      <li class="c6 li-bullet-0">
+      <li class="c2 c7 li-bullet-0">
         <span
           >Boosted funding and organization visibility by 35% through the
           creation of online animal profiles, surveys, contests and donation
@@ -1025,56 +1010,56 @@
         >
       </li>
     </ul>
-    <p class="c11 c15"><span class="c2"></span></p>
-    <p class="c1">
-      <span class="c5"
+    <p class="c2 c5"><span class="c1 c3"></span></p>
+    <p class="c18">
+      <span class="c1 c8 c9"
         >Catering
         Captain&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2012-2020</span
       >
     </p>
-    <p class="c1">
-      <span class="c5"
+    <p class="c18">
+      <span class="c1 c8 c9"
         >Server&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Boulder, CO</span
       >
     </p>
-    <p class="c1">
-      <span class="c2"
+    <p class="c18">
+      <span class="c1 c3"
         >Served customers from all areas of the world in a high-paced,
         high-energy catering company.</span
       >
     </p>
-    <p class="c1"><span class="c2">Key Accomplishments: </span></p>
-    <ul class="c4 lst-kix_9gbxhgp56ahx-0 start">
-      <li class="c13 li-bullet-0">
-        <span class="c2"
+    <p class="c18"><span class="c1 c3">Key Accomplishments: </span></p>
+    <ul class="c17 lst-kix_9gbxhgp56ahx-0 start">
+      <li class="c7 c12 li-bullet-0">
+        <span class="c1 c3"
           >Created individualized recipes and printed professional hard-copy
           menus to provide guests with dining options.</span
         >
       </li>
-      <li class="c13 li-bullet-0">
-        <span class="c2"
+      <li class="c12 c7 li-bullet-0">
+        <span class="c1 c3"
           >Maintained contact with kitchen staff, management, serving staff, and
           customers.</span
         >
       </li>
-      <li class="c13 li-bullet-0">
-        <span class="c2"
+      <li class="c12 c7 li-bullet-0">
+        <span class="c1 c3"
           >Monitored food distribution, ensured meals were delivered to the
           correct recipients and that guidelines for special diets were
           followed.</span
         >
       </li>
-      <li class="c13 li-bullet-0">
+      <li class="c12 c7 li-bullet-0">
         <span>Managed food delivery for 300+ guests for special events.</span>
       </li>
     </ul>
-    <p class="c1 c12"><span class="c2"></span></p>
-    <p class="c18"><span class="c5">EDUCATION </span></p>
-    <p class="c18">
-      <span class="c14">Full Stack Web Development (in progress) </span
-      ><span class="c2"
+    <p class="c5 c6"><span class="c1 c3"></span></p>
+    <p class="c4"><span class="c1 c8 c9">EDUCATION </span></p>
+    <p class="c4">
+      <span class="c8">Full Stack Web Development (in progress) </span
+      ><span class="c1 c3"
         >&ndash; University of
         Denver&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Denver, CO &nbsp; &nbsp; &nbsp;
@@ -1083,10 +1068,10 @@
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span
       >
     </p>
-    <p class="c11 c15"><span class="c2"></span></p>
-    <p class="c11">
-      <span class="c14">Bachelor of Arts, Food Service Management</span
-      ><span class="c2"
+    <p class="c2 c5"><span class="c1 c3"></span></p>
+    <p class="c2">
+      <span class="c8">Bachelor of Arts, Food Service Management</span
+      ><span class="c1 c3"
         >&nbsp;&ndash; Johnson &amp; Wales University &nbsp; &nbsp; &nbsp;
         &nbsp; Denver, CO &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span
       >
