edited portfolio link

--- a/KatlynBoches.html
+++ b/KatlynBoches.html
@@ -872,7 +872,7 @@
       ><span class="c13"
         ><a
           class="c20"
-          href="https://www.google.com/url?q=https://katlyn627.github.io/Professional-Portfolio-KIB/folio-KIB/&amp;sa=D&amp;source=editors&amp;ust=1630908651621000&amp;usg=AOvVaw1tn14pWw6qZJridALLI3P4"
+          href="https://katlyn627.github.io/Professional-Portfolio-KIB/"
           >Github Portfolio</a
         ></span
       ><span>&nbsp; &nbsp;| GitHub: &nbsp;</span
