--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#Contact-Me">Contact Me</a>
           </li>
           <li>
-            <a href="/KatlynBoches.html">Resume</a>
+            <a href="/Resume.html">Resume</a>
           </li>
         </ul>
       </nav>
