--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title class="title">Katlyn's Portfolio</title>
   </head>
-
   <body>
     <header class="header">
       <h1>Katlyn Irene Boches</h1>
@@ -27,13 +26,12 @@
       </nav>
     </header>
     <div class="main-image">
-      <div class="subtitle">Cool Subtitle Here</div>
+      <div class="subtitle">Future Computer Engineer</div>
     </div>
-    <main class="main-content">
-      <div>
-        <div class="About-Me" id="About-Me">
-          <h2>About Me</h2>
-          <p>
+    <main>
+      <section id = "about-me">
+          <h1>About Me</h1>
+          <div>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi optio
             fuga doloremque perspiciatis, ipsa dolores perferendis sequi
             veritatis totam dignissimos, dolore illum tempora ad amet harum
@@ -41,15 +39,16 @@
             consectetur adipisicing elit. Eius, molestias temporibus. Optio
             veritatis perferendis, asperiores expedita tenetur eveniet nobis sit
             ducimus pariatur consequatur, autem ab? Quae perferendis id cum ad?
-          </p>
+          </div>
+        </section>
+      <section id ="work">
+        <h1>Work</h1>
+        <div>
+
         </div>
-      </div>
-      <div class="Work" id="Work">
-        <h2>Work</h2>
-        <p></p>
-      </div>
-      <div class="Contact-Me" id="Contact-Me">
-        <h3>Contact Me</h3>
+      </section>
+      <section id="contact-me">
+        <h1>Contact Me</h1>
         <ul>
           <li>
             <a href="Phone-Number">555-633-3464</a>
