--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title class="title">Katlyn's Portfolio</title>
   </head>
+
   <body>
     <header class="header">
       <h1>Katlyn Irene Boches</h1>
@@ -26,12 +27,13 @@
       </nav>
     </header>
     <div class="main-image">
-      <div class="subtitle">Future Computer Engineer</div>
+      <div class="subtitle">Cool Subtitle Here</div>
     </div>
-    <main>
-      <section id = "about-me">
-          <h1>About Me</h1>
-          <div>
+    <main class="main-content">
+      <section>
+        <div class="About-Me" id="About-Me">
+          <h2>About Me</h2>
+          <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi optio
             fuga doloremque perspiciatis, ipsa dolores perferendis sequi
             veritatis totam dignissimos, dolore illum tempora ad amet harum
@@ -39,34 +41,35 @@
             consectetur adipisicing elit. Eius, molestias temporibus. Optio
             veritatis perferendis, asperiores expedita tenetur eveniet nobis sit
             ducimus pariatur consequatur, autem ab? Quae perferendis id cum ad?
-          </div>
-        </section>
-      <section id ="work">
-        <h1>Work</h1>
-        <div>
-
+          </p>
         </div>
       </section>
-      <section id="contact-me">
-        <h1>Contact Me</h1>
-        <ul>
-          <li>
-            <a href="Phone-Number">555-633-3464</a>
-          </li>
-          <li>
-            <a href="Email">katlynboches@gmail.com</a>
-          </li>
-          <li>
-            <a href="Github">Github</a>
-          </li>
-          <li>
-            <a href="Twitter">Twitter</a>
-          </li>
-          <li>
-            <a href="Spotify">Spotify</a>
-          </li>
-        </ul>
-      </div>
+      <section>
+        <div class="Work" id="Work">
+          <h2>Work</h2>
+          <p></p>
+      </section> 
+      <section>
+        <div class="Contact-Me" id="Contact-Me">
+          <h2>Contact Me</h2>
+          <ul>
+            <li>
+              <a href="Phone-Number">555-633-3464</a>
+            </li>
+            <li>
+              <a href="Email">katlynboches@gmail.com</a>
+            </li>
+            <li>
+              <a href="Github">Github</a>
+            </li>
+            <li>
+              <a href="Twitter">Twitter</a>
+            </li>
+            <li>
+              <a href="Spotify">Spotify</a>
+            </li>
+          </ul>
+      </section>
     </main>
   </body>
 </html>
