changed index html

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <div class="main-image">
       <div class="subtitle">Cool Subtitle Here</div>
     </div>
-    <main class="main-content">
+    <main>
       <section>
-        <div class="About-Me" id="About-Me">
+        <div class="about-me" id="about-me">
           <h2>About Me</h2>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi optio
@@ -45,12 +45,12 @@
         </div>
       </section>
       <section>
-        <div class="Work" id="Work">
+        <div class="work" id="work">
           <h2>Work</h2>
           <p></p>
       </section> 
       <section>
-        <div class="Contact-Me" id="Contact-Me">
+        <div class="contact-ce" id="contact-me">
           <h2>Contact Me</h2>
           <ul>
             <li>
@@ -69,6 +69,7 @@
               <a href="Spotify">Spotify</a>
             </li>
           </ul>
+
       </section>
     </main>
   </body>
