--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       <nav>
         <ul>
           <li>
-            <a href="#About-Me">About Me</a>
+            <a href="#about-me">About Me</a>
           </li>
           <li>
-            <a href="#Work">Work</a>
+            <a href="#work">Work</a>
           </li>
           <li>
-            <a href="#Contact-Me">Contact Me</a>
+            <a href="#contact-me">Contact Me</a>
           </li>
           <li>
             <a href="/Professional-Portfolio-KIB/KatlynBoches.html">Resume</a>
@@ -27,7 +27,7 @@
       </nav>
     </header>
     <div class="main-image">
-      <div class="subtitle">Cool Subtitle Here</div>
+      <div class="subtitle">Going to be a Computer Programmer</div>
     </div>
     <main>
       <section>
@@ -50,7 +50,7 @@
           <p></p>
       </section> 
       <section>
-        <div class="contact-ce" id="contact-me">
+        <div class="contact-me" id="contact-me">
           <h2>Contact Me</h2>
           <ul>
             <li>
