edited the About Me section

--- a/index.html
+++ b/index.html
@@ -34,13 +34,7 @@
         <div class="about-me" id="about-me">
           <h2>About Me</h2>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi optio
-            fuga doloremque perspiciatis, ipsa dolores perferendis sequi
-            veritatis totam dignissimos, dolore illum tempora ad amet harum
-            eligendi iusto, quibusdam minima! Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Eius, molestias temporibus. Optio
-            veritatis perferendis, asperiores expedita tenetur eveniet nobis sit
-            ducimus pariatur consequatur, autem ab? Quae perferendis id cum ad?
+            I am a Colorado Native and current business major at CU Boulder. I have been in the Food Service Management industry for over three years and love to travel. I am eager to get started with my career in this field, I am a travel enthusiast with skills in business, marketing, and computer programming. I am looking to use my skills to start a successful career in the Computer Programming Industry.
           </p>
         </div>
       </section>
