edited section margins

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="about-me" id="about-me">
           <h2>About Me</h2>
           <p>
-            I am a Colorado Native and current student at University of Denver, working on getting a full-stack web development, coding certification. I have been in the Food Service Management industry for over three years and love to travel. I am eager to get started with my career in this field, I am a travel enthusiast with skills in business, marketing, and computer programming. I am looking to use my skills to start a successful career in the Computer Programming Industry.
+            I am a Colorado Native and current business major at CU Boulder. I have been in the Food Service Management industry for over three years and love to travel. I am eager to get started with my career in this field, I am a travel enthusiast with skills in business, marketing, and computer programming. I am looking to use my skills to start a successful career in the Computer Programming Industry.
           </p>
         </div>
       </section>
