--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
 
   <body>
-    <header class="header">
-      <h1 id = "h1">Katlyn Irene Boches</h1>
+    <header>
+      <div class = "logo">Katlyn Irene Boches</h1></div>
       <nav>
         <ul>
           <li>
@@ -27,19 +27,17 @@
       </nav>
     </header>
     <div class="main-image">
-      <div class="subtitle">Going to be a Computer Programmer</div>
+      <div class="subtitle"><h1>Going to be a Computer Programmer</h1></div>
     </div>
     <main>
-      <section>
-        <div class="about-me" id="about-me">
+      <section id="about-me">
           <h2>About Me</h2>
-          <p>
-            I am a Colorado Native and current business major at CU Boulder. I have been in the Food Service Management industry for over three years and love to travel. I am eager to get started with my career in this field, I am a travel enthusiast with skills in business, marketing, and computer programming. I am looking to use my skills to start a successful career in the Computer Programming Industry.
-          </p>
+          <div>
+            Hello! <br/><br/>I am a Colorado Native and current business major at CU Boulder. I have been in the Food Service Management industry for over three years and love to travel. I am eager to get started with my career in this field, I am a travel enthusiast with skills in business, marketing, and computer programming. I am looking to use my skills to start a successful career in the Computer Programming Industry.>
         </div>
       </section>
       <section>
-        <div class="work" id="work">
+        <div id="work">
           <h2>Work</h2>
           <p></p>
       </section> 
