edited html page

--- a/index.html
+++ b/index.html
@@ -31,19 +31,75 @@
     </div>
     <main>
       <section id="about-me">
-          <h2>About Me</h2>
+          <h1>About Me</h1>
           <div>
             Hello! <br/><br/>I am a Colorado Native and current business major at CU Boulder. I have been in the Food Service Management industry for over three years and love to travel. I am eager to get started with my career in this field, I am a travel enthusiast with skills in business, marketing, and computer programming. I am looking to use my skills to start a successful career in the Computer Programming Industry.>
         </div>
       </section>
       <section>
         <div id="work">
-          <h2>Work</h2>
-          <p></p>
-      </section> 
+          <h1>Work</h1>
+          <div>
+            <a
+              class="work-main-class"
+              href=""
+            >
+              <img
+                class="work-img feature"
+                src="./assets/images/artist-dashboard.jpeg"
+                alt="artist-dashboard"
+              />
+              <div class="work-subtitle"><h3>Artist Dashboard</h3></div></a
+            >
+            <a
+              class="work-link"
+              href=""
+              target="_blank"
+              ><img
+                class="work-img"
+                src="./assets/images/employee-directory.png"
+                alt="employee-directory"
+              />
+              <div class="work-subtitle"><h3>Employee Directory</h3></div></a
+            >
+            <a
+              class="work-link"
+              href="https://stx-box-office.herokuapp.com"
+              target="_blank"
+              ><img
+                class="work-img"
+                src="./assets/images/stx-box-office.png"
+                alt="stx-box-office"
+              />
+              <div class="work-subtitle"><h3>STX Box Office</h3></div></a
+            >
+            <a
+              class="work-link"
+              href="https://www.github.com/hannahfolk/spokeo"
+              target="_blank"
+              ><img
+                class="work-img"
+                src="./assets/images/spokeo-extension.png"
+                alt="spokeo-extension"
+              />
+              <div class="work-subtitle"><h3>Spokeo Extension</h3></div></a
+            >
+            <a
+              class="work-link"
+              href="https://hannahfolk.github.io/weather-dashboard-react"
+              target="_blank"
+              ><img
+                class="work-img"
+                src="./assets/images/weather-dashboard-react.png"
+                alt="weather-dashboard-react"
+              />
+              <div class="work-subtitle"><h3>Weather Dashboard</h3></div></a
+            >
+          </div>
+        </section>
       <section>
-        <div class="contact-me" id="contact-me">
-          <h2>Contact Me</h2>
+        <div id="contact-me">
+          <h1>Contact Me</h1>
           <ul>
             <li>
               <a href="Phone-Number">555-633-3464</a>
