added images and alt ta

--- a/index.html
+++ b/index.html
@@ -10,20 +10,10 @@
     <header>
       <div class = "logo">Katlyn Irene Boches</h1></div>
       <nav>
-        <ul>
-          <li>
             <a href="#about-me">About Me</a>
-          </li>
-          <li>
             <a href="#work">Work</a>
-          </li>
-          <li>
             <a href="#contact-me">Contact Me</a>
-          </li>
-          <li>
             <a href="/KatlynBoches.html">Resume</a>
-          </li>
-        </ul>
       </nav>
     </header>
     <div class="main-image">
@@ -42,58 +32,58 @@
           <div>
             <a
               class="work-main-class"
-              href=""
+              href="https://www.epicurious.com/"
             >
               <img
-                class="work-img feature"
-                src="./assets/images/artist-dashboard.jpeg"
-                alt="artist-dashboard"
+                class="work-img"
+                src="./assets/images/food.jpg"
+                alt="recipe"
               />
-              <div class="work-subtitle"><h3>Artist Dashboard</h3></div></a
+              <div class="work-subtitle"><h3>Recipe Website</h3></div></a
             >
             <a
               class="work-link"
-              href=""
+              href="https://freshysites.com/web-design-development/best-gym-and-fitness-websites/"
               target="_blank"
               ><img
                 class="work-img"
-                src="./assets/images/employee-directory.png"
-                alt="employee-directory"
+                src="./assets/images/fitness.jpg"
+                alt="fitnes-webpage"
               />
-              <div class="work-subtitle"><h3>Employee Directory</h3></div></a
+              <div class="work-subtitle"><h3>Fitness Website</h3></div></a
             >
             <a
               class="work-link"
-              href="https://stx-box-office.herokuapp.com"
+              href="https://en.wikipedia.org/wiki/Dance"
               target="_blank"
               ><img
                 class="work-img"
-                src="./assets/images/stx-box-office.png"
-                alt="stx-box-office"
+                src="./assets/images/dancing.jpeg"
+                alt="dancers"
               />
-              <div class="work-subtitle"><h3>STX Box Office</h3></div></a
+              <div class="work-subtitle"><h3>Dancing App</h3></div></a
             >
             <a
               class="work-link"
-              href="https://www.github.com/hannahfolk/spokeo"
+              href="https://en.wikipedia.org/wiki/Web_application"
               target="_blank"
               ><img
                 class="work-img"
-                src="./assets/images/spokeo-extension.png"
-                alt="spokeo-extension"
+                src="./assets/images/open laptop.jpg"
+                alt="web-app"
               />
-              <div class="work-subtitle"><h3>Spokeo Extension</h3></div></a
+              <div class="work-subtitle"><h3>Web App</h3></div></a
             >
             <a
               class="work-link"
-              href="https://hannahfolk.github.io/weather-dashboard-react"
+              href="https://playingcarddecks.com/blogs/all-in/40-great-card-games-for-all-occasions"
               target="_blank"
               ><img
                 class="work-img"
-                src="./assets/images/weather-dashboard-react.png"
+                src="./assets/images/cards.jpg"
                 alt="weather-dashboard-react"
               />
-              <div class="work-subtitle"><h3>Weather Dashboard</h3></div></a
+              <div class="work-subtitle"><h3>Playing Javascript</h3></div></a
             >
           </div>
         </section>
