added alt tags to images

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               ><img
                 class="work-img"
                 src="./assets/images/dancing.jpeg"
-                alt="dancers"
+                alt="dancers-dancing"
               />
               <div class="work-subtitle"><h3>Dancing App</h3></div></a
             >
